--- a/src/assets/components/bananaBank/bananabank.css
+++ b/src/assets/components/bananaBank/bananabank.css
@@ -65,3 +65,33 @@ img{
     display: flex;
     gap: 2em;
 }
+
+#accountDetails{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    align-items: center;
+}
+
+#accountPositions{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+
+}
+
+#showBalance{
+    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#accountInfo{
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
